# crisviper

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  affine_gap_alignment.py  carlin_tool.py  config.yaml  crisviper_config.yaml  debug_accuracy.py  fastp.html  fastp.json  gen_comparison_heatmap.py  install.sh  pyproject.toml  requirements.txt  results_report.html  run_corrected.py  run_full_test.py  run_geb_validation.py  run_lineage_test.sh  run_pipeline.py  run_test_raw.py  run_tests.py  setup.cfg  setup.py  test.sh  test_gap_extend.sh  test_imports.py
.github/workflows/: ci.yml
config/: amplicon_structure_example.json
crisviper/: __init__.py  alignment.py  caller.py  cli.py  config.py  corrections.py  denoiser.py  io.py  lineage.py  logging_config.py  metrics.py  models.py  mutation.py  pipeline.py  plotting.py  reporting.py  summary.py  threshold.py
docs/: ALGORITHM.md  USER_GUIDE.md  paired_end_usage.md  分析流程详细说明.md
docs/superpowers/specs/: 2026-05-16-geb-profile-design.md  2026-05-19-complex-to-indel-design.md
example_data/: query_file.fa  reference.fa  test_queries.tsv
examples/: README.md  run_example.py
ltlib/: __init__.py  alignment.py  caller.py  cli.py  config.py  corrections.py  denoiser.py  io.py  lineage.py  logging_config.py  metrics.py  models.py  mutation.py  pipeline.py  plotting.py  reporting.py  threshold.py
results/: barcode_frequencies.tsv  run_comparison.py  statistics.json
results_new/: run_comparison.py
src/lineage_tracer_amplicon/: __init__.py  cli.py  cli_backup.py
src/lineage_tracer_amplicon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/lineage_tracer_amplicon/analysis/: engine.py
src/lineage_tracer_amplicon/core/: __init__.py  anchor_alignment.py  mutation_classification.py  primer_validation.py  structures.py
src/lineage_tracer_amplicon/io/: config_parser.py  fastp_merge.py
templates/: report.html
test/: test_paired_end.py  test_suite.py
test_data/: EPSC2_config.json  test_config.json
tests/: shared.py  test_accuracy.py  test_affine_gap_alignment.py  test_gap_exit_bonus.py  test_io.py  test_metrics.py  test_mutation.py  test_new_modules.py  test_pipeline.py  test_summary.py
workflow/: Snakefile
