[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crisviper"
version = "1.0.0"
description = "谱系示踪序列分析命令行工具 — 仿射gap比对、突变检测、谱系示踪分析"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "gsx-ucas"},
]

dependencies = [
    "numpy>=1.19.0",
    "biopython>=1.79",
    "matplotlib>=3.3.0",
    "jinja2>=3.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[project.urls]
Repository = "https://github.com/sxgou/lineage-tracer"

[project.scripts]
crisviper = "crisviper.cli:main"

[tool.setuptools]
packages = {find = {include = ["crisviper", "crisviper.*"]}}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
