[metadata]
name = lineage-tracer-amplicon
version = 1.0.0
author = Developer
author_email = developer@example.com
description = CRISPR lineage tracing amplicon analysis software
long_description = file: README.md
long_description_content_type = text/markdown
keywords = CRISPR, lineage tracing, amplicon, bioinformatics
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.9
install_requires =
    biopython>=1.81
    pandas>=2.0
    numpy>=1.24
    scipy>=1.10
    matplotlib>=3.7
    pyyaml>=6.0
    edlib>=1.3.9
    tqdm>=4.65
    pysam>=0.21

[options.entry_points]
console_scripts =
    lineage-tracer = lineage_tracer_amplicon.cli:main

[options.extras_require]
dev =
    pytest>=7.4
    pytest-cov>=4.1
    black>=23.7
    mypy>=1.5
    flake8>=6.1

[flake8]
max-line-length = 88
extend-ignore = E203, W503

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True

[egg_info]
tag_build = 
tag_date = 0